fixed name jumping on two rows

--- a/styles.css
+++ b/styles.css
@@ -18,25 +18,31 @@ body {
 }
 
 #name {
-	color:blueviolet;
+	color:rgb(49, 11, 156);
 	font-family: Helvetica;
-	font-size: 8vh;
-	font-weight: bolder;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin: -5vh 0 0 -35vh;
+	font-weight: 900;
+	position: relative;
+	white-space: nowrap;
+	height: fit-content;
+	width: fit-content;
+	/* top: (50% - (width / 2));
+	left: (50% - (height / 2)); */
+	margin: -10vh auto auto auto;
 }
 
 #topbox {
-	/* background-color: rgb(201, 106, 71); */
-	border-radius: 5% / 75%;
-	width: 100%;
-	height: 15%;
+	text-align: center;
+	border-top: 10vh solid grey;
+	border-left: 5vw solid transparent;
+	border-right: 5vw solid transparent;
+	height: 0;
+	width: 90%;
+	
 	position: fixed;
 	left: 0;
 	top: 0;
-	animation: moveTopbox 2s;
+	animation: moveFromTop 2s;
+	/* text-align: center; */
 }
 
 #idgithub {
@@ -89,16 +95,42 @@ body {
 	}
 }
 
-@keyframes moveTopbox {
+@keyframes moveFromTop {
 	0% {
 		visibility: hidden;
 		opacity: 0;
-		top: -15%;
+		top: -15vh;
 	}
 	
 	100% {
 		visibility: visible;
 		opacity: 1;
-		top:0%
+		top:0vh
+	}
+}
+
+@keyframes moveFromTop2 {
+	0% {
+		top: -15vh;
+		visibility: hidden;
+		opacity: 0;
+	}
+	
+	100% {
+		top:0vh;
+		visibility: visible;
+		opacity: 1;
+	}
+}
+
+@keyframes fadeAway {
+	0% {
+		visibility: visible;
+		opacity: 1;
+	}
+	
+	100% {
+		visibility: hidden;
+		opacity: 0;
 	}
 }
